# ImageProcessing

./: .gitignore  404.html  CNAME  Doxyfile  README.md  chunk-4BIZPDWT.js  chunk-7FWLNB2G.js  chunk-AHDOY7ZP.js  chunk-AINUYF6Y.js  chunk-AO6TQWNW.js  chunk-BE6YZIN2.js  chunk-DCKNTUEK.js  chunk-H2J4UE7U.js  chunk-IS6UV7RM.js  chunk-JB5CU3KD.js  chunk-JU7QKBCZ.js  chunk-LOUTWMT4.js  chunk-P7YL42A3.js  chunk-QZO4VOQV.js  chunk-S4KOWQD5.js  chunk-S7HUM5OQ.js  chunk-SL7VFHOC.js  chunk-T2F5KAZF.js  chunk-VDOAHBK6.js  chunk-W3COXLIP.js  chunk-W4O2QXHF.js  chunk-WUCKL4DD.js  generate-docs.ps1  index.html  main-3JWI3SZF.js  main-43LV5VHI.js  main-4JXBNT7T.js  main-6YZA3BBK.js  main-7BYWKIKT.js  main-AD2CRO3U.js  main-AGTMHW4L.js  main-AZESLN3I.js  main-CH4GY5NL.js  main-HDHVP6A5.js  main-IUY2FTMJ.js  (+25 more)
.github/workflows/: backend_imageprocessingapi.yml  backend_tests  backend_tests.yml  docker_compose_test.yml  docker_test.yml  frontend_frontend.yml  main_frontend.yml  main_tests.yml  render.yaml
DotNet/ImagesAPI/ImagesAPI/Lib/Debug/: ImagesProcessor.exp
DotNet/ImagesAPI/ImagesAPI/Lib/Release/: ImagesProcessor.exp
DotNet/ImagesAPI/ImagesAPI/Logger/: Logging.cs
DotNet/ImagesAPI/ImagesAPI/Services/: GoogleService.cs  IDropboxService.cs  IImagesCollectionService.cs  ImagesCollectionService.cs
DotNet/ImagesAPI/ImagesAPI/Settings/: GoogleAPISettings.cs  IMongoDBSettings.cs
VC/ImagesProcessor/ImagesProcessor/: GrayscaleFilter.h  ImageData.h  SobelFilter.h  pch.h  stb_image_implementation.cpp  stb_image_implementation.h
assets/: global-material-overrides.scss
assets/themes/: custom-theme.scss  theme-mixins.scss  theme.scss
back-end/: app.py
back-end/DotNet/: README.md
back-end/DotNet/ImagesAPI/: ImagesAPI.sln  docker-compose.yml
back-end/DotNet/ImagesAPI/ImagesAPI/: .env.example  Dockerfile  ImagesAPI.csproj  ImagesAPI.http  Program.cs  appsettings.Development.json
back-end/DotNet/ImagesAPI/ImagesAPI/Controllers/: DiagnosticsController.cs  ImagesController.cs  UsersController.cs
back-end/DotNet/ImagesAPI/ImagesAPI/Helpers/: AuthHelper.cs  JsonOptions.cs  ResponseHelper.cs  StartupHelper.cs
back-end/DotNet/ImagesAPI/ImagesAPI/Hubs/: ProgressHub.cs
back-end/DotNet/ImagesAPI/ImagesAPI/Logger/: Logging.cs
back-end/DotNet/ImagesAPI/ImagesAPI/Middleware/: ApiKeyAuthenticationMiddleware.cs
back-end/DotNet/ImagesAPI/ImagesAPI/Models/: CreateUserDTO.cs  EAllowedExtensions.cs  EAllowedFilters.cs  ImageModel.cs  UpdateUserDTO.cs  UserDTO.cs  UserDTOBase.cs  UserModel.cs
back-end/DotNet/ImagesAPI/ImagesAPI/Properties/: launchSettings.json
back-end/DotNet/ImagesAPI/ImagesAPI/Services/: DropboxService.cs  GoogleService.cs  ICollectionService.cs  IDriveService.cs  IGoogleService.cs  IImagesCollectionService.cs  ImagesCollectionService.cs
back-end/DotNet/ImagesAPI/ImagesAPI/Settings/: DropboxAPISettings.cs  GoogleAPISettings.cs  IDropboxAPISettings.cs  IGoogleAPISettings.cs  IMongoDBSettings.cs  MongoDBSettings.cs
back-end/DotNet/ImagesAPI/ImagesAPI/Validators/: ImageUploadValidator.cs
back-end/DotNet/ImagesAPITests/: ImagesAPIControllerTests.cs  ImagesAPITests.csproj  ImagesCollectionServiceTests.cs  UsersControllerTests.cs
back-end/VC/: README.MD
back-end/VC/ImagesProcessor/: CMakeLists.txt  CMakeLists.txt.in  ImagesProcessor.sln
back-end/VC/ImagesProcessor/ImagesProcessor/: AllFilters.h  BlurFilter.cpp  BlurFilter.h  CannyFilter.cpp  CannyFilter.h  Defines.h  EAllowedExtensions.h  EDefinedFilters.h  FilterFactory.cpp  FilterFactory.h  FlipHorizontalFilter.cpp  FlipHorizontalFilter.h  FlipVerticalFilter.cpp  FlipVerticalFilter.h  GlitchFilter.cpp  GlitchFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  Helpers.cpp  Helpers.h  IFilter.h  ImageData.cpp  ImageData.h  ImagesProcessor.cpp  ImagesProcessor.h  ImagesProcessor.rc  ImagesProcessor.vcxproj  ImagesProcessor.vcxproj.filters  InvertFilter.cpp  InvertFilter.h  KaleidoscopeFilter.cpp  KaleidoscopeFilter.h  Logger.cpp  Logger.h  MosaicFilter.cpp  MosaicFilter.h  OilPaintFilter.cpp  OilPaintFilter.h  SepiaFilter.cpp  SepiaFilter.h  (+10 more)
back-end/VC/ImagesProcessor/ImagesProcessorTests/: ImagesProcessorBasicTests.cpp  ImagesProcessorCallbackTests.cpp  ImagesProcessorFilterTests.cpp  ImagesProcessorPerformanceTests.cpp  ImagesProcessorTest.cpp  ImagesProcessorTest.h  ImagesProcessorTests.vcxproj  ImagesProcessorTests.vcxproj.filters  main.cpp
browser/: index.html  main-EXYMPJAX.js  main-FPWNRQWS.js
docs/licenta/: Licenta_2025_Horovei_Dumitru_10LF222.docx  Prezentare_Licenta_2025_Horovei_Dumitru_10LF222.pptx  licenta.docx
front-end/image-processing/: README.md  angular.json  config-env.js  package-lock.json  package.json
front-end/image-processing/src/: index.html  styles.scss
front-end/image-processing/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
front-end/image-processing/src/app/edit-image/: edit-image.component.html  edit-image.component.scss  edit-image.component.spec.ts  edit-image.component.ts
front-end/image-processing/src/app/filter-buttons/: filter-buttons.component.html  filter-buttons.component.scss  filter-buttons.component.spec.ts  filter-buttons.component.ts
front-end/image-processing/src/app/filter-sidebar/: filter-sidebar.component.html  filter-sidebar.component.scss  filter-sidebar.component.spec.ts  filter-sidebar.component.ts
front-end/image-processing/src/app/gallery/: gallery.component.html  gallery.component.scss  gallery.component.spec.ts  gallery.component.ts
front-end/image-processing/src/app/home/: home.component.html  home.component.scss  home.component.spec.ts  home.component.ts
front-end/image-processing/src/app/image-dialog/: image-dialog.component.html  image-dialog.component.scss  image-dialog.component.spec.ts  image-dialog.component.ts
front-end/image-processing/src/app/image-hierarchy/: image-hierarchy.component.html  image-hierarchy.component.scss  image-hierarchy.component.spec.ts  (+1 more)
front-end/image-processing/src/environments/: environment.prod.ts  environment.ts
(+62 files in other folders)
